syntax = "proto3";

option java_package = "com.lykke.matching.engine.incoming";
option java_outer_classname = "BalancesMessages";
option csharp_namespace = "MatchingEngine.Client.Contracts.Balances";

package com.swisschain.grpc.balances;

import "google/protobuf/timestamp.proto";

message BalancesGetAllRequest {
	uint64 walletId = 1;
	string brokerId = 2;
}

message BalancesGetByAssetIdRequest {
	uint64 walletId = 1;
	string assetId = 2;
	string brokerId = 3;
}

message BalancesGetAllResponse {
	uint64 walletId = 1;
	repeated Balance balances = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message BalancesGetByAssetIdResponse {
	uint64 walletId = 1;
	Balance balance = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message Balance {
	string assetId = 1;
	string amount = 2;
	string reserved = 3;
}
